# mmad-app

./: .gitignore  .pylintrc  README.md  mmad-app.spec  mmad_export.csv  pyproject.toml  pyside6-numpy-mpl-scipy.spec  requirements-dev.txt  requirements.txt
docs/: notes.md  structure_app.md
src/mmad-app/: __main__.py  app.py
src/mmad_app/: __main__.py  app.py
src/mmad_app/core/: mmad.py  mmad_new.py  models.py  normal.py  probit.py  probit_fit.py
src/mmad_app/db/: path.py  repo.py  schema.py
src/mmad_app/ui/: db_panel.py  main_window.py  plot_tabs.py  plot_widget.py  result_panel.py
tests/: test_computate_mmad.py  test_cumulative_undersize.py  test_interpolate_d_at_cum_pct_logx.py  test_mmad.py  test_mmad_least_squares.py  test_normal.py  test_probit.py
