[project]
name = "mmad-app"
version = "0.1.0"
description = "MMAD calculator for Andersen Cascade Impactor data (PySide6 + matplotlib)"
requires-python = ">=3.12"
dependencies = [
  "PySide6>=6.6",
  "matplotlib>=3.8",
  "numpy>=1.24",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]